tests/fail/string_literal_not_ended.tig
let
    var s := "This is a string literal that begins here...
in
end
